# farmmerce-backend

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  requirements.txt  sample.env
alembic/: env.py
alembic/versions/: 15216f2ffdc6_update_user_model.py  288dcbd55acc_your_message.py  2b0e491c71f0_first_version.py  34f9c953c72f_update_user_model.py  468f3cec612a_update_user_table.py  4699d38f0d27_initial_migration.py  4ef2c10c85a1_initial_migration.py  5c090bcf6165_initial_migration.py  5ccd15f04b4e_initial_migration.py  96a40f4efde4_initial_migration.py  a7c6c4d60be2_update_foreign_key.py  b5efc300399c_initial_migration.py  bb03919c98ac_init_new_models_product_order_rating_.py  beb4c20e610d_init_new_models_product_order_rating_.py  bf80fd7a471c_init_new_models_product_order_rating_.py  c6ca088cbdd5_add_order_total_amount.py  ca4f21c313f2_initial_migration.py  ccc635dc496e_initial_migration.py  d296368e9132_init_new_models_product_order_rating_.py  d9113d4725e9_initial_migration.py  dafbaa00bbe3_initial_migration.py  db8c0be39ba7_initial_migration.py  ded0d34e4b45_add_product_category.py  e288f2bf7ce8_init_new_models_product_order_rating_.py  e4bf7cc978b7_add_a_new_row_on_user.py  f021662ad22f_update_review_table.py  f31d2f1afd93_initial_migration.py  f52b61b5c650_init_new_models_product_order_rating_.py  f685ceda0cbf_add_a_new_row_on_user.py  ff7f81a7d120_added_quantity_column.py
app/: __init__.py  settings.py
app/auth/: login.py
app/instances/: __init__.py  db_config.py
(+45 files in other folders)
